--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@mysten/dapp-kit": "^0.17.3",
+    "@mysten/sui": "^1.37.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -40,12 +42,14 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.85.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.9.1",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
