--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.1",
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
+    "@google-cloud/recaptcha-enterprise": "^6.3.0",
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
